# spider_robot_zephyr

./: .clangd  .gitignore  CMakeLists.txt  DEVICE_TREE.md  Kconfig  Kconfig.secrets  README.md  \  app.overlay  prj.conf  telnet
.cache/clangd/index/: main.c.756C768081D6269F.idx
include/: gait.h  kinematics.h  robot_state.h  servos.h  spider_robot.h  tcp_command.h
src/: gait.c  gait_thread.c  kinematics.c  main.c  motors_thread.c  robot_state.c  servos.c  tcp_server.c  tcp_server_thread.c
src/threads/: gait_thread.c  motors_thread.c  tcp_server_thread.c
tests/kinematics/: CMakeLists.txt  prj.conf
tests/kinematics/src/: test_kinematics.c
